--- a/.gitignore
+++ b/.gitignore
@@ -860,3 +860,5 @@
 .venv/lib/python3.12/site-packages/pip-24.2.dist-info/REQUESTED
 .venv/lib/python3.12/site-packages/pip-24.2.dist-info/top_level.txt
 .venv/lib/python3.12/site-packages/pip-24.2.dist-info/WHEEL
+Latest.py
+Test.py
